feat(Blog): Translation VI-EN